Fixed issue with Home scroll on mobile.

--- a/ui/scss/_app.scss
+++ b/ui/scss/_app.scss
@@ -3,15 +3,11 @@
   position: relative;
   min-height: 100vh;
   max-width: 100vw;
-  overflow: hidden;
 
   @media all and (min-width: 700px) {
     display: flex;
     flex-direction: row;
-  }
-
-  @media all and (max-width: 699px) {
-    overflow: auto;
+    overflow: hidden;
   }
 }
 
